fix(demo): scenario validation fixes and validate.sh scripts
Fixes and validates demo scenarios end-to-end:
- P3 pending-taint, P4 node-notready, P6 slo-burn (BLOCKED #217),
  P11 crashloop-helm, P12 cert-failure, P14 statefulset-pvc-failure,
  P15 network-policy-block: all validated PASS or documented as BLOCKED
- P10 gitops-drift: infrastructure setup (Gitea + ArgoCD), scenario
  restructured to use nginx.conf mount pattern
- Add validate.sh scripts for all completed scenarios
- Add SCENARIO_CATALOG.md with scenario descriptions
- Fix kind-config paths, signalName mismatches, PrometheusRule labels,
  workflow schema wildcard support, Helm chart checksum annotations
- Remove deprecated disk-pressure scenario (replaced by orphaned-pvc)
- Update charts for TLS cert job and notification templates

Made-with: Cursor

--- a/charts/kubernaut/templates/hooks/tls-cert-job.yaml
+++ b/charts/kubernaut/templates/hooks/tls-cert-job.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-weight": "1"
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "5"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   backoffLimit: 3
@@ -80,6 +80,9 @@ spec:
               rm -rf "$TMPDIR"
               echo "==> AuthWebhook TLS setup complete"
 ---
+# Shared RBAC for all Helm hooks (pre-install TLS cert + post-install migration).
+# Uses both pre- and post- phases so the SA exists across all hook jobs.
+# Only cleaned up on next install/upgrade (before-hook-creation), not on success.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -88,9 +91,9 @@ metadata:
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": before-hook-creation
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -99,9 +102,9 @@ metadata:
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": before-hook-creation
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -126,9 +129,9 @@ metadata:
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
-    "helm.sh/hook-weight": "0"
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": before-hook-creation
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
