--- a/charts/kubernaut/values.yaml
+++ b/charts/kubernaut/values.yaml
@@ -71,6 +71,13 @@ workflowexecution:
 
 # -- Notification controller
 notification:
+  # Per-receiver credentials projected into /etc/notification/credentials/
+  # Each entry creates a projected volume source from a K8s Secret.
+  # Issue #104: Named credential store (PV/PVC pattern)
+  credentials:
+    - name: slack-webhook
+      secretName: slack-webhook
+      secretKey: webhook-url
   resources:
     requests:
       cpu: 100m
