--- a/deploy/demo/scenarios/crashloop-helm/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/crashloop-helm/workflow/workflow-schema.yaml
@@ -12,9 +12,9 @@ metadata:
 actionType: HelmRollback
 
 labels:
-  signalName: CrashLoopBackOff
-  severity: [critical, low]
-  environment: [production, staging]
+  signalName: KubePodCrashLooping
+  severity: [critical, high]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/helm-rollback-job@sha256:7d52eaea2a61ec1292d1fa3e49741a53712cc3b677a709c90f0482a8908c04e4
+  bundle: quay.io/kubernaut-cicd/test-workflows/helm-rollback-job@sha256:f23baab51006d365887df8f3e23ad37ccb7fadc89f0638554d6b514e88b2964d
 
 parameters:
   - name: TARGET_NAMESPACE
