--- a/deploy/demo/scenarios/gitops-drift/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/gitops-drift/workflow/workflow-schema.yaml
@@ -12,9 +12,9 @@ metadata:
 actionType: GitRevertCommit
 
 labels:
-  signalName: CrashLoopBackOff
+  signalName: KubePodCrashLooping
   severity: [critical, high]
-  environment: [production, staging]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
@@ -25,7 +25,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/git-revert-job@sha256:ca61f4bb12e3a8ecfd47bcf4bc0f58004d45199f50494ce9cfd202203b40bc79
+  bundle: quay.io/kubernaut-cicd/test-workflows/git-revert-job@sha256:3177c568c6a055d118ae1f6d0782f301405de9646eff205892299de2ce5b6555
 
 parameters:
   - name: GIT_REPO_URL
