--- a/deploy/demo/scenarios/orphaned-pvc-no-action/manifests/deployment.yaml
+++ b/deploy/demo/scenarios/orphaned-pvc-no-action/manifests/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: data-processor
-  namespace: demo-disk
+  namespace: demo-orphaned-pvc
   labels:
     app: data-processor
     kubernaut.ai/managed: "true"
