--- a/deploy/demo/scenarios/orphaned-pvc-no-action/manifests/namespace.yaml
+++ b/deploy/demo/scenarios/orphaned-pvc-no-action/manifests/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-disk
+  name: demo-orphaned-pvc
   labels:
     kubernaut.ai/environment: production
     kubernaut.ai/business-unit: data
