--- a/deploy/demo/scenarios/resource-quota-exhaustion/manifests/prometheus-rule.yaml
+++ b/deploy/demo/scenarios/resource-quota-exhaustion/manifests/prometheus-rule.yaml
@@ -9,20 +9,22 @@ spec:
   groups:
   - name: kubernaut-resource-quota
     rules:
-    - alert: KubePodPendingQuotaExhausted
+    - alert: KubeResourceQuotaExhausted
       expr: |
-        kube_pod_status_phase{
-          namespace="demo-quota",
-          phase="Pending"
-        } > 0
+        max by (replicaset, namespace) (
+          (kube_replicaset_spec_replicas{namespace="demo-quota"} > 0)
+          unless on(replicaset, namespace)
+          (kube_replicaset_status_replicas{namespace="demo-quota"} > 0)
+        )
       for: 1m
       labels:
         severity: warning
       annotations:
         summary: >
-          Pod {{ $labels.pod }} in namespace {{ $labels.namespace }} is stuck
-          in Pending state, likely due to ResourceQuota exhaustion.
+          ReplicaSet {{ $labels.replicaset }} in namespace {{ $labels.namespace }}
+          wants pods but has zero running. ResourceQuota likely prevents creation.
         description: >
-          One or more pods in the demo-quota namespace are in Pending state.
-          This is typically caused by exceeding the namespace ResourceQuota
-          limits. Check kubectl describe quota -n demo-quota for details.
+          A ReplicaSet in the demo-quota namespace has desired replicas but zero
+          actual replicas. This occurs when ResourceQuota prevents pod creation
+          at admission (FailedCreate). Pods never reach Pending state.
+          Check: kubectl describe quota -n demo-quota && kubectl describe rs {{ $labels.replicaset }} -n demo-quota
