--- a/deploy/demo/scenarios/slo-burn/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/slo-burn/workflow/workflow-schema.yaml
@@ -14,13 +14,13 @@ actionType: ProactiveRollback
 labels:
   signalName: ErrorBudgetBurn
   severity: [critical, high]
-  environment: [production, staging]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/proactive-rollback-job@sha256:fcd5f3f6035f8c5a1e77041b189d439168a84ce91bf9c31a773d322763f46750
+  bundle: quay.io/kubernaut-cicd/test-workflows/proactive-rollback-job@sha256:47bb5fc766807f56e281fb6a74bfa40c51856bd75d8ade9aa074f75a0dca247f
 
 parameters:
   - name: TARGET_NAMESPACE
