fix(demo): validate P9 autoscale scenario end-to-end (#126)
Fix provisioner to create Kind-compatible containers with proper
volume mounts (named volume for /var, tmpfs, security-opt), matching
how Kind itself creates worker nodes. Fix kubeadm join preflight
errors with --ignore-preflight-errors=SystemVerification.

- remediate.sh: make NODE_IMAGE and CLUSTER_NAME configurable via
  env vars with correct defaults for the demo Kind cluster
- workflow-schema.yaml: align signalName to KubePodSchedulingFailed
  (matching PrometheusRule alert name), update bundle reference
- deployment.yaml: increase memory requests to 2Gi so 8 replicas
  exceed single-worker capacity and trigger Pending pods
- prometheus-rule.yaml: reduce for window from 2m to 1m
- provisioner.sh: add Kind-compatible container config, node
  registration wait loop, increase timeouts

Made-with: Cursor

--- a/deploy/demo/scenarios/autoscale/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/autoscale/workflow/workflow-schema.yaml
@@ -12,15 +12,15 @@ metadata:
 actionType: ProvisionNode
 
 labels:
-  signalName: FailedScheduling
+  signalName: KubePodSchedulingFailed
   severity: [critical, high]
-  environment: [production, staging]
+  environment: [production, staging, "*"]
   component: "*"
   priority: "*"
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/provision-node-job@sha256:a9d8d3cbe21561f9f79368a0fac89e7bc234db92d8ebc4b54088dfcdc7fb815e
+  bundle: quay.io/kubernaut-cicd/test-workflows/provision-node-job:demo-v1.2
 
 parameters:
   - name: TARGET_NAMESPACE
