--- a/deploy/demo/scenarios/autoscale/manifests/deployment.yaml
+++ b/deploy/demo/scenarios/autoscale/manifests/deployment.yaml
@@ -25,10 +25,10 @@ spec:
         - containerPort: 80
         resources:
           requests:
-            memory: "512Mi"
+            memory: "2Gi"
             cpu: "250m"
           limits:
-            memory: "512Mi"
+            memory: "2Gi"
             cpu: "500m"
         livenessProbe:
           httpGet:
