chore(demo): remove MP4 output from VHS tapes and gitignore *.mp4
MP4 recordings are not viewable inline on GitHub and take significant
storage. Remove all Output *.mp4 directives from tape files (GIF output
is retained). Add *.mp4 to .gitignore and untrack the existing
crashloop.mp4 (2.8MB).

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,9 @@ UNIT_TEST_*.md
 *SUCCESS*.md
 *BREAKTHROUGH*.md
 
+# VHS recording artifacts (GIFs are committed, MP4s are too large for GitHub)
+*.mp4
+
 # Build artifacts (large binaries that should never be committed)
 workflowexecutor
 integration-webhook-server
