--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
@@ -12,9 +12,9 @@ metadata:
 actionType: GitRevertCommit
 
 labels:
-  signalName: CertificateNotReady
+  signalName: CertManagerCertNotReady
   severity: [critical, high]
-  environment: [production, staging]
+  environment: "*"
   component: "*"
   priority: "*"
 
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job@sha256:a4815d96c9a78dd4d02b9bea4474f8527bed56ce75b58a0dbcba764c91baca4f
+  bundle: localhost/fix-certificate-gitops-job:demo-v1.2
 
 parameters:
   - name: GIT_REPO_URL
