--- a/deploy/demo/scenarios/mesh-routing-failure/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/mesh-routing-failure/workflow/workflow-schema.yaml
@@ -12,9 +12,9 @@ metadata:
 actionType: FixAuthorizationPolicy
 
 labels:
-  signalName: HighErrorRate
+  signalName: LinkerdHighErrorRate
   severity: [critical, high]
-  environment: [production, staging]
+  environment: ["*"]
   component: "*"
   priority: "*"
 
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/fix-authz-policy-job@sha256:9a22907584da9feebc9cb4e4e0b67cbbfacd52f91790c511c06f0f353d812264
+  bundle: quay.io/kubernaut-cicd/test-workflows/fix-authz-policy-job@sha256:f82ad9b9bde7869037d200fc01ae00ae54f9709cf073b1548e015458eaca75ba
 
 parameters:
   - name: TARGET_NAMESPACE
@@ -32,8 +32,8 @@ parameters:
     description: "Namespace of the affected workload"
   - name: TARGET_POLICY
     type: string
-    required: false
-    description: "Name of the AuthorizationPolicy to remove (if known)"
+    required: true
+    description: "Name of the AuthorizationPolicy to remove"
   - name: TARGET_SERVER
     type: string
     required: false
