fix(demo/cert-failure-gitops): fix environment type and bundle reference
- Change environment from bare string "*" to array ["*"] for DataStorage
  validation (yaml: cannot unmarshal !!str into []string)
- Update bundle from localhost/ to quay.io registry path

Made-with: Cursor

--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
@@ -14,7 +14,7 @@ actionType: GitRevertCommit
 labels:
   signalName: CertManagerCertNotReady
   severity: [critical, high]
-  environment: "*"
+  environment: ["*"]
   component: "*"
   priority: "*"
 
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: localhost/fix-certificate-gitops-job:demo-v1.2
+  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:demo-v1.2
 
 parameters:
   - name: GIT_REPO_URL
