fix(hapi): prompt engineering for GitOps, rollback, and escalation (#219, #217, #224)
#219: Strengthen cluster_context note to be prescriptive when gitOpsManaged=true,
and add GitOps action-type selection heuristic to Phase 4 prompt.

#217: Add ProactiveRollback heuristic to Phase 4 for error-rate spikes
correlated with deployment revision changes.

#224: Detect completed-but-recurring remediations and inject REPEATED
INEFFECTIVE warning into the prompt. Threshold configurable via
config.yaml (prompt.repeated_remediation_escalation_threshold, default 2).

Closes #219, #217, #224

Made-with: Cursor

--- a/holmesgpt-api/config.yaml
+++ b/holmesgpt-api/config.yaml
@@ -23,3 +23,7 @@ audit:
   flush_interval_seconds: 0.1    # Fast flush for integration tests (0.1s)
   buffer_size: 10000              # Maximum events to buffer in memory
   batch_size: 50                  # Events per HTTP batch to Data Storage
+
+# Prompt engineering configuration (Issue #224, BR-HAPI-016)
+prompt:
+  repeated_remediation_escalation_threshold: 2  # Escalate after N completed-but-recurring remediations
