fix(hapi): wire confidence_threshold_human_review as config parameter (BR-HAPI-198)
The CONFIDENCE_THRESHOLD_HUMAN_REVIEW constant (0.7) was unused and
not configurable. Add it to config.yaml under prompt section, add
the field to PromptConfig TypedDict, include prompt defaults in
load_config(), and add "prompt" to the merge keys list so config.yaml
values are actually loaded (fixes a gap where prompt settings were
silently ignored).

Made-with: Cursor

--- a/holmesgpt-api/config.yaml
+++ b/holmesgpt-api/config.yaml
@@ -27,3 +27,4 @@ audit:
 # Prompt engineering configuration (Issue #224, BR-HAPI-016)
 prompt:
   repeated_remediation_escalation_threshold: 2  # Escalate after N completed-but-recurring remediations
+  confidence_threshold_human_review: 0.7  # BR-HAPI-198: Threshold for needs_human_review flag
