fix(test): align HAPI NodePort with DD-TEST-001 (30120 → 30088)
HAPI E2E tests used a non-authoritative NodePort 30120 which was not
allocated by DD-TEST-001. This caused intermittent "nodePort already
allocated" failures in fullpipeline E2E when Kubernetes auto-assigned
30120 to another service before HAPI's Service was created.

Changed all HAPI port references to the authoritative allocation per
DD-TEST-001: NodePort 30088, host port 8088. Updated across:
- Kind cluster configs (test + demo)
- Go E2E infrastructure and suite test
- Python E2E tests and config
- Helm values and Kustomize overlay

Made-with: Cursor

--- a/deploy/demo/overlays/kind/kind-cluster-config.yaml
+++ b/deploy/demo/overlays/kind/kind-cluster-config.yaml
@@ -19,9 +19,9 @@ nodes:
   - containerPort: 30081
     hostPort: 30081
     protocol: TCP
-  # HolmesGPT API (LLM integration, debugging)
-  - containerPort: 30120
-    hostPort: 30120
+  # HolmesGPT API (LLM integration, debugging) - Per DD-TEST-001
+  - containerPort: 30088
+    hostPort: 8088
     protocol: TCP
   # Grafana (kube-prometheus-stack Helm chart NodePort)
   - containerPort: 30300
