fix(helm): remove hardcoded credentials and add existingSecret support (#216)
Removed hardcoded PostgreSQL password (demo-password) and added the
standard Helm existingSecret pattern for both PostgreSQL and Redis.

Changes:
- values.yaml: password defaults to "" (must be provided via --set or
  existingSecret), added existingSecret fields, added notification.slack
  config section (default: disabled)
- _helpers.tpl: kubernaut.postgresql.secretName and
  kubernaut.datastorage.secretName helpers
- secrets.yaml: conditional creation (skipped when existingSecret is set),
  validation fail if neither existingSecret nor password provided
- postgresql.yaml, migration-job.yaml, datastorage.yaml: use helper for
  dynamic Secret name resolution
- values-demo.yaml: demo overlay with demo-password for local development

CI impact: NONE (E2E tests use hardcoded test_password in Go templates,
never read values.yaml or invoke Helm).

Closes #216

Made-with: Cursor

--- a/charts/kubernaut/templates/infrastructure/postgresql.yaml
+++ b/charts/kubernaut/templates/infrastructure/postgresql.yaml
@@ -45,17 +45,17 @@ spec:
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
-                  name: postgresql-secret
+                  name: {{ include "kubernaut.postgresql.secretName" . }}
                   key: POSTGRES_USER
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgresql-secret
+                  name: {{ include "kubernaut.postgresql.secretName" . }}
                   key: POSTGRES_PASSWORD
             - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
-                  name: postgresql-secret
+                  name: {{ include "kubernaut.postgresql.secretName" . }}
                   key: POSTGRES_DB
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
