--- a/charts/kubernaut/templates/infrastructure/secrets.yaml
+++ b/charts/kubernaut/templates/infrastructure/secrets.yaml
@@ -1,3 +1,7 @@
+{{- if not .Values.postgresql.auth.existingSecret }}
+{{- if not .Values.postgresql.auth.password }}
+{{- fail "postgresql.auth.password is required when postgresql.auth.existingSecret is not set. Use --set postgresql.auth.password=<value> or -f values-demo.yaml" }}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -25,3 +29,4 @@ stringData:
     password: {{ .Values.postgresql.auth.password }}
   redis-secrets.yaml: |
     password: {{ .Values.redis.password | quote }}
+{{- end }}
