--- a/charts/kubernaut/templates/datastorage/datastorage.yaml
+++ b/charts/kubernaut/templates/datastorage/datastorage.yaml
@@ -114,7 +114,7 @@ spec:
             name: datastorage-config
         - name: secrets
           secret:
-            secretName: datastorage-secret
+            secretName: {{ include "kubernaut.datastorage.secretName" . }}
 ---
 apiVersion: v1
 kind: Service
