--- a/charts/kubernaut/templates/hooks/migration-job.yaml
+++ b/charts/kubernaut/templates/hooks/migration-job.yaml
@@ -43,7 +43,7 @@ spec:
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgresql-secret
+                  name: {{ include "kubernaut.postgresql.secretName" . }}
                   key: POSTGRES_PASSWORD
             - name: PGDATABASE
               value: {{ .Values.postgresql.auth.database }}
