--- a/charts/kubernaut/values.yaml
+++ b/charts/kubernaut/values.yaml
@@ -81,6 +81,11 @@ workflowexecution:
 
 # -- Notification controller
 notification:
+  # -- Enable Slack delivery channel. When false (default), only console/log delivery is active.
+  # Requires a K8s Secret with the Slack webhook URL (see credentials below).
+  slack:
+    enabled: false
+    channel: "#kubernaut-alerts"
   # Per-receiver credentials projected into /etc/notification/credentials/
   # Each entry creates a projected volume source from a K8s Secret.
   # Issue #104: Named credential store (PV/PVC pattern)
@@ -151,11 +156,14 @@ eventExporter:
       cpu: 200m
 
 # -- PostgreSQL (DataStorage backend)
+# Credentials: provide EITHER existingSecret OR password (via --set).
+# existingSecret must contain keys: POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB
 postgresql:
   image: postgres:16-alpine
   auth:
+    existingSecret: ""  # name of pre-created K8s Secret; when set, chart skips Secret creation
     username: slm_user
-    password: demo-password
+    password: ""  # required when existingSecret is empty; use --set or values-demo.yaml
     database: action_history
   storage:
     size: 10Gi
@@ -169,8 +177,11 @@ postgresql:
       cpu: 500m
 
 # -- Redis (DataStorage DLQ)
+# Credentials: provide EITHER existingSecret OR password (via --set).
+# existingSecret must contain key: password
 redis:
   image: quay.io/jordigilh/redis:7-alpine
+  existingSecret: ""  # name of pre-created K8s Secret; when set, chart skips Secret creation
   password: ""
   storage:
     size: 512Mi
